# UA-2023-GraphicsEngine

./: CMakeLists.txt  README.md  engine.cc
Include/: Calculator.cpp  Calculator.h  easy_image.cc  easy_image.h  l_parser.cc  l_parser.h
Objects/: Calculator.cpp  Calculator.h  Camera.h  Face.cpp  Face.h  ImageDetails.h  IniLoader.cpp  IniLoader.h  LSystem2D.cpp  LSystem2D.h  LSystem3D.cpp  LSystem3D.h  Light.cpp  Light.h  Line2D.h  ObjFileParser.cpp  ObjFileParser.h  Object3D.cpp  Object3D.h  Object3DFactory.cpp  Point2D.h  Renderer.cpp  Renderer.h  Scene.cpp  Scene.h  ShadowLight.cpp  Triangle.h  Wireframe.cpp  Wireframe.h  ZBuffer.cpp  ZBuffer.h
all_Ini_files/lsystems/: snowflake_triangle.L2D
all_ini_files/3d_fractals/: filelist
all_ini_files/3dfigures/: Fig20_1.L3D  filelist  objfile.ini  objfile2.ini  objfile3.ini  objfile4.ini  wireframes056.ini
all_ini_files/lsystems/: filelist  l_systems004.ini  treeStochaic.L2D
all_ini_files/testbench/: filelist  shadowingTest2.ini
all_ini_files/z_buffering/: PSE.ini  filelist
exampleFiles/: filelist  treeLsys.ini
examplefiles/: filelist  objfile.ini
liveRender/: CMakeLists.txt  LiveRender.cpp  LiveRender.h  main.cpp
readmeFiles/: README.md
